<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:orientation="vertical" >
	    <TextView android:id="@+id/course_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:maxLines="2"
	        android:ellipsize="end" />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/course_description"
	        android:textColor="#888" />
	    <TextView android:id="@+id/course_description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    
	    <Button android:id="@+id/course_link"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/course_link" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/course_provider"
	        android:textColor="#888" />
	    <TextView android:id="@+id/course_provider"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/course_language"
	        android:textColor="#888" />
	    <TextView android:id="@+id/course_language"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    
	    <!--TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/course_date_published"
	        android:textColor="#888" />
	    <TextView android:id="@+id/course_date_published"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="11/07/2010 10:50PM" /-->
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/course_score"
	        android:textColor="#888" />
	    <TextView android:id="@+id/course_score"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	</LinearLayout>
</ScrollView>
